# M6502

./: Cargo.toml  README.md
.cargo/: config.toml
assembly/: .gitignore  Makefile  add_with_carry.test.s  address_modes.test.s  basic.rom.cfg  basic.rom.s  bitshift.test.s  branches.test.s  comparison.test.s  flags.test.s  framework.test.s  increment.test.s  jump.test.s  lda.test  lda.test.s  logical.test.s  other.test.s  simple.program.s  simple_add.p.s  simple_add.s  stack.test.s  test.cfg  test.inc  test.s.h  transfer_instructions.test.s
src/: app.rs  binutils.rs  computer.rs  lib.rs  main.rs  proxy.rs  tui.rs
src/computer/: bus.rs  clock.rs  cpu.rs  inspect.rs  memory.rs
src/computer/cpu/: inspect.rs  instruction.rs  status.rs  test_framework.rs
src/tui/: app.rs  events.rs  widgets.rs
src/tui/widgets/: address.rs  memory.rs  mod.rs  register.rs  status_register.rs
