[package]
name = "m6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
inline_colorization = "0.1.6"
log = "0.4.26"
smart-default = "0.7.1"
strum = "0.27.1"
strum_macros = "0.27.1"

[dev-dependencies]
test-log = "*"
