[package]
name = "m6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
env_logger = "0.11.6"
inline_colorization = "0.1.6"
log = "0.4.26"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
ratatui-explorer = "0.1.4"
smart-default = "0.7.1"
strum = "0.27.1"
strum_macros = "0.27.1"
tui-menu = "0.3.0"

[dev-dependencies]
test-log = "*"
test-case = "3.3.1"
